<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BangunDatar.SegitigaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_segitiga_luas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/segitiga_luas_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/et_segitiga_luas_alas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/segitiga_luas"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/et_segitiga_luas_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/segitiga_luas_tinggi"
                    android:inputType="numberDecimal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_segitiga_luas"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_16sdp"
                        android:text="@string/hitung" />

                    <TextView
                        android:id="@+id/tv_result_segitiga_luas"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:gravity="center"
                        android:padding="@dimen/_20sdp"
                        android:paddingBottom="@dimen/_40sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_segitiga_keliling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/keliling_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/et_segitiga_keliling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/segitiga_keliling"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/et_segitiga_keliling2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/segitiga_keliling2"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/et_segitiga_keliling3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/segitiga_keliling3"
                    android:inputType="numberDecimal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_segitiga_keliling"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_16sdp"
                        android:text="@string/hitung" />

                    <TextView
                        android:id="@+id/tv_result_segiiga_keliling"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:gravity="center"
                        android:padding="@dimen/_20sdp"
                        android:paddingBottom="@dimen/_40sdp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>