<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BangunRuang.PrismaFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16sdp"
        android:padding="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_40sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_prisma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/prisma_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_prisma1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/et_prisma1"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_prisma2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/et_prisma2"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_prisma"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:background="@drawable/buton_bg"
                    android:text="@string/hitung"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/tv_result_prisma"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_40sdp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>